fix: teamUpdate and applications